<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="bottom">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardCornerRadius="5dp"
        android:elevation="16dp">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleText"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personTitle"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"/>

            <CheckBox
                android:id="@+id/cbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/burgundy"
                android:text="@string/male" />

            <CheckBox
                android:id="@+id/cbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/burgundy"
                android:text="@string/female" />

            <CheckBox
                android:id="@+id/cbOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/burgundy"
                android:text="@string/other" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>