<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listContainer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:elevation="16dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:id="@+id/styleList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/styleTitle"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbBlackWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/burgundy"
                android:text="@string/black_white" />

            <CheckBox
                android:id="@+id/cbWaterColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/burgundy"
                android:text="@string/watercolor" />

            <CheckBox
                android:id="@+id/cbOldSchool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/burgundy"
                android:text="@string/old_school" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>