<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/profileNameTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:text="@string/profileNameTag"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profileNameTag"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/profileMailTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileMailTag"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profileNameField"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/profileMailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profileMailTag"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/profilePhoneTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profilePhoneTag"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profileMailField"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/profilePhoneField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoneTag"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/profileAddressTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileAddressTag"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoneField"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/profileAddressField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profileAddressTag"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/profileSocialsTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileSocialsTag"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profileAddressField"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="200dp"
        app:layout_constraintLeft_toRightOf="@+id/profileNameTag"/>

</androidx.constraintlayout.widget.ConstraintLayout>