<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/profileNameTagTv"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/profileNameTag"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileNameFieldTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profileNameTagTv"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/profileMailTagTv"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileMailTag"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profileNameFieldTv"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/profileMailFieldTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profileMailTagTv"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/profilePhoneTagTv"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profilePhoneTag"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profileMailFieldTv"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/profilePhoneFieldTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoneTagTv"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/profileAddressTagTv"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileAddressTag"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoneFieldTv"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/profileStreetFieldTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profileAddressTagTv"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/profileCityFieldTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profileStreetFieldTv"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/profileSocialsTagTv"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileSocialsTag"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profileCityFieldTv"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="200dp"
        app:layout_constraintLeft_toRightOf="@+id/profileNameTagTv"/>

</androidx.constraintlayout.widget.ConstraintLayout>